Bug fix for getting exactly the sample size needed instead of less